# planar

./: .gitignore  Cargo.toml  README.md
disp/: Cargo.toml
disp/src/: lib.rs
p-hc/: Cargo.toml
p-local/: Cargo.toml
p-local/src/: function.rs  lib.rs  metastore.rs  queue.rs  runtime.rs
p-local/src/metastore/: etcd.rs
p-local/src/queue/: amqp.rs
pal/: Cargo.toml
pal/src/: function.rs  lib.rs  metadata.rs
planar-core/: Cargo.toml
planar-core/src/: apdu.rs  lib.rs  table_md.rs
pmapi/: Cargo.toml
sqlp/: Cargo.toml
sqlp/src/: lib.rs
svc-local/: Cargo.toml
svc-local/src/: main.rs
tmapi/: Cargo.toml
