[package]
name = "p-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planar-core = { path = "../planar-core" }
pal = { path = "../pal" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
