[package]
name = "p-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planar-core = { path = "../planar-core" }
pal = { path = "../pal" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.19", features = ["server", "client", "tcp"] }
etcd-client = "0.9"
lapin = { version = "2.1.1", default-features = false }
futures-lite = "1.12.0"
async-trait = "0.1.56"