[package]
name = "svc-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p-local = { path = "../p-local" }
sqlp = { path = "../sqlp" }
disp = { path = "../disp" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"